--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ body, html {
     #80ddea,
     #d1c4e9
   );
+  
 }
 
 #style_Legend {
@@ -54,6 +55,25 @@ body, html {
   overflow: auto;
   z-index: 999999;
 }
+#style_Legend_Terrain {
+  display: none;
+}
+.class_Legend_Terrain {
+  position: absolute;
+  padding: 5px;
+  border: 3px solid #73ad21;
+  border-radius: 5px;
+  opacity: 0.9;
+  background: lightyellow;
+  max-width: 100px;
+  min-width: 80px;
+  max-height: 500px;
+  top: 240px;
+  right: 16px;
+  margin: 0 1em 1em 1em;
+  overflow: auto;
+  z-index: 999999;
+}
 
 header{
   position: relative;
@@ -65,37 +85,49 @@ header{
  align-content: center;
  font-size: 32px;
  font-family: Georgia, serif;
- font-weight: bold;
+ font-weight: bolder;
  position: absolute;
  z-index: 1;
- background: rgba(0, 0, 0, 0.5);
+/*  background: rgba(0, 0, 0, 0.5); */
  height: 208px; width: 100%;
  top: -40px;
  color: white;
  line-height: 1.6;
  text-transform: uppercase;
+text-shadow:  0 0 3px #000000, 0 0 5px #000000;;
+ 
 }
 
 
 .headerDiv .span1{
  
   font-size: 40px;
-  font-family: 'Courier New', monospace;
- font-weight: normal;
+  font-family: Georgia, serif;
+
+ 
  text-transform: capitalize;
+ color: rgb(245, 121, 5);
+
+ 
 }
 .headerDiv .span2{
   font-size: 20px;
  font-family: Georgia, serif;
  text-transform: capitalize;
-  font-weight: normal;
+  
+ color: rgb(56, 173, 20);
+
 }
 
 marquee{
   font-size: 13px;
   text-transform: capitalize;
-  margin-top: 15px;
-  color: #9eee1d;
+  padding: 4px;
+  color: #f10202;
+  font-weight: normal;
+  background: #f8ec40;
+text-shadow:  none;
+
 }
 
 #nav-button {
@@ -111,6 +143,7 @@ nav {
   z-index: 1;
   top: 80px;
   bottom: 0;
+  /* background-color: #7cb342; */
   background: rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.5);
@@ -130,7 +163,7 @@ nav ul li a {
   font-size: 1em;
   text-decoration: none;
   text-transform: capitalize;
-  color: #000;
+  color: #000000;
   padding: 10px 30px;
   height: 50px;
   transition: 0.5s ease;
@@ -565,9 +598,8 @@ overflow: scroll; */
    }
 
    marquee{
-    font-size: 11px;
-    text-transform: capitalize;
-    margin-top: 50px;
+    font-size: 12px;
+    padding: 2px;
   }
   nav {
     width: 135px;
